# PollyInstrew

./: Instrew_doitgen.ll  Instrew_floyd_warshall.ll
client/: dispatch.c
generate/: PollyInstrew_doitgen.ll  PollyInstrew_doitgen_multi.ll  PollyInstrew_floyd_warshall.ll  generate.cc  meson.build  preprocess.py
server/: GEPPromotePass.cc  GEPPromotePass.h  GEPRestorePass.cc  GEPRestorePass.h  decode.cc  meson.build  optimizer.cc  optimizer.h  rewriteserver.cc
subprojects/rellume/: meson.build
temp1/: floyd-warshall_time.mc  nussinov_time.mc
temp2/: floyd_kernel.ll  floyd_kernel_ref.ll  floyd_kernel_ref1.ll  nussinov.ll  nussinov_ref.ll  nussinov_ref_1.ll
test/: corrtest.sh  perftest.sh
